Hægt að bæta við notanda, ákveða role hans. Notendur og admins geta skoðað lista yfir notendur.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,9 +6,9 @@ nord.entity.package = is.nord.model
 
 # Details for our datasource
 nord.db.driver = org.postgresql.Driver
-nord.db.url= jdbc:postgresql://localhost:5432/nord
+nord.db.url= jdbc:postgresql://localhost:5432/norddb
 nord.db.username=postgres
-nord.db.password=my_pass
+nord.db.password=postgres
 
 # Hibernate properties
 hibernate.dialect = org.hibernate.dialect.PostgreSQL82Dialect
