made progress with displaying the ad images

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,7 @@ hibernate.implicit_naming_strategy = org.hibernate.boot.model.naming.ImplicitNam
 hibernate.format_sql = true
 hibernate.show_sql = true
 hibernate.hbm2ddl.auto = create
+
+# MAX IMAGE SIZE
+spring.http.multipart.max-file-size=10MB
+spring.http.multipart.max-request-size=10MB
