--- a/pom.xml
+++ b/pom.xml
@@ -106,7 +106,11 @@
             <version>1.8.10</version>
         </dependency>
 
-
+        <dependency>
+            <groupId>org.thymeleaf.extras</groupId>
+            <artifactId>thymeleaf-extras-java8time</artifactId>
+            <version>2.1.0.RELEASE</version>
+        </dependency>
 
 
         <dependency>
