--- a/pom.xml
+++ b/pom.xml
@@ -177,6 +177,11 @@
             <scope>test</scope>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-web-api</artifactId>
+            <version>8.0</version>
+        </dependency>
     </dependencies>
 
     <build>
