--- a/pom.xml
+++ b/pom.xml
@@ -198,6 +198,10 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>com.heroku.sdk</groupId>
+                <artifactId>heroku-maven-plugin</artifactId>
+            </plugin>
 
         </plugins>
     </build>
