--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,13 +5,11 @@
 nord.entity.package = is.nord.model
 
 # Details for our datasource
-spring.datasource.url=${JDBC_DATABASE_URL}
-spring.datasource.username=${JDBC_DATABASE_USERNAME}
-spring.datasource.password=${JDBC_DATABASE_PASSWORD}
-spring.jpa.show-sql=false
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create
-        
+nord.db.driver = org.postgresql.Driver
+nord.db.url= jdbc:postgresql://localhost:5432/norddb
+nord.db.username=postgres
+nord.db.password=postgres
+
 # Hibernate properties
 hibernate.dialect = org.hibernate.dialect.PostgreSQL82Dialect
 hibernate.implicit_naming_strategy = org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
