--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,13 +5,8 @@
 nord.entity.package = is.nord.model
 
 # Details for our datasource
-spring.datasource.url=${DATABASE_URL}
-spring.datasource.username=${DATABASE_USERNAME}
-spring.datasource.password=${DATABASE_PASSWORD}
-spring.jpa.show-sql=false
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create
-        
+spring.datasource.driverClassName=org.postgresql.Driver
+
 # Hibernate properties
 hibernate.dialect = org.hibernate.dialect.PostgreSQL82Dialect
 hibernate.implicit_naming_strategy = org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
