--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,11 +33,11 @@ spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL82Dialect
 
 # Hibernate properties
-hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-hibernate.implicit_naming_strategy = org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
-hibernate.format_sql = true
-hibernate.show_sql = true
-hibernate.hbm2ddl.auto = update
+#hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+#hibernate.implicit_naming_strategy = org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
+#hibernate.format_sql = true
+#hibernate.show_sql = true
+#hibernate.hbm2ddl.auto = update
 
 # MAX IMAGE SIZE
 spring.http.multipart.max-file-size=10MB
