--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>is.nord</groupId>
     <artifactId>nord</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>war</packaging>
+    <!--<packaging>war</packaging>-->
 
     <parent>
         <groupId>org.springframework.boot</groupId>
