--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 
 # Package where our entities (models) are located
 nord.entity.package = is.nord.model
-        
+
 
 # Details for our datasource
 #nord.db.driver = org.postgresql.Driver
@@ -27,7 +27,7 @@ spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL82Dialect
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 # Hibernate properties
 #hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
